# github-as-crate-registry

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: crates_new_payload.rs  main.rs  storage.rs
src/http/: auth_token.rs  mod.rs
src/storage/: github_backend.rs
