[package]
name = "github-as-crate-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
poem = "3.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.18"
octocrab = "0.39.0"
serde = "*"
serde_json = "*"
sha256 = "1.5"
sha1 = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
base64 = "0.22"
hyper = "0.14"
http-body-util = "0.1"
futures-util = "0.3"
