[package]
name = "private-crate-hub"
version = "0.1.0"
edition = "2021"
licence = "MIT"
description = "A private Rust crate registry that securely stores your crate data in a GitHub repository, simplifying management and distribution while ensuring version control, backups, and access only for authorized users."

[dependencies]
log = "0.4.22"
poem = "3.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.18"
octocrab = "0.39.0"
serde = "*"
serde_json = "*"
sha256 = "1.5"
sha1 = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
base64 = "0.22"
hyper = "0.14"
http-body-util = "0.1"
futures-util = "0.3"
